Files committed from Adapter on Thu Jul 29 2021

--- a/theme/partials/meg.liquid
+++ b/theme/partials/meg.liquid
@@ -5,7 +5,7 @@
       </a>
       <nav role="navigation" class="nav-bg w-nav-menu">
         <a href="{{ links.55b8e8be }}" class="nav-bar-link w-nav-link">{{ texts.585238d }}</a>
-        <a href="{{ links.-2f68657 }}" sym-bind="{&quot;children&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;91b8d221-fe0f-de16-a61a-9208acf61807&quot;}}}" class="nav-bar-link w-nav-link">{{ texts.-3b86e786 }}</a>
+        <a href="{{ links.11aa52 }}" sym-bind="{&quot;children&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;91b8d221-fe0f-de16-a61a-9208acf61807&quot;}}}" class="nav-bar-link w-nav-link">{{ texts.-3b86e786 }}</a>
         <a href="{{ links.4b0e6111 }}" class="nav-bar-link w-nav-link">{{ texts.38b72420 }}</a>
         <a href="{{ links.23 }}" class="nav-bar-link hide w-nav-link">{{ texts.2e2fa2 }}</a>
       </nav>
